syntax = "proto3";

package proto;

option go_package = "github.com/rhaloubi/payment-gateway/auth-service/proto;proto";

service RoleService {
  rpc AssignMerchantOwnerRole (AssignMerchantOwnerRoleRequest)
      returns (AssignMerchantOwnerRoleResponse);

  rpc GetUserRoles (GetUserRolesRequest)
      returns (GetUserRolesResponse);
  
  rpc AssignRoleToUser (AssignRoleToUserRequest)
      returns (AssignRoleToUserResponse);
}

message AssignMerchantOwnerRoleRequest {
  string user_id = 1;
  string merchant_id = 2;
}

message AssignMerchantOwnerRoleResponse {
  string user_id = 1;
  string role_id = 2;
  string role_name = 3;
  string merchant_id = 4;
  string message = 5;
}

message AssignRoleToUserRequest {
  string user_id = 1;
  string role_id = 2;
  string merchant_id = 3;
  string assigned_by = 4;
}

message AssignRoleToUserResponse {
  string user_id = 1;
  string role_id = 2;
  string role_name = 3;
  string merchant_id = 4;
  string assigned_by = 5;
  string message = 6;
}

message GetUserRolesRequest {
  string user_id = 1;
  string merchant_id = 2;
}

message Role {
  string id = 1;
  string name = 2;
}

message GetUserRolesResponse {
  string user_id = 1;
  string merchant_id = 2;
  repeated Role roles = 3;
}



